crates/styx-tree/src/snapshots/styx_tree__diagnostic__tests__mixed_separators_diagnostic.snap
---
source: crates/styx-tree/src/diagnostic.rs
expression: stripped
---
Error: mixed separators in object
   ╭─[ test.styx:2:6 ]
   │
 2 │   a 1,
   │      ┬  
   │      ╰── mixing commas and newlines
   │ 
   │ Help: use either commas or newlines to separate entries, not both
───╯
